wdphp week2 assignment

--- a/assgn-week2.html
+++ b/assgn-week2.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Welcome Paul Walker from Introduction To Programming</title>
+  <title> ... Paul Walker b80d1e ... </title>
   <meta charset="UTF-8">
 </head>
 
