--- a/assgn-week2.html
+++ b/assgn-week2.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
   <title> ... Paul Walker b80d1e ... </title>
   <meta charset="UTF-8">
@@ -17,7 +17,7 @@
 </ul>
 
 
-<div><em>Text not in span</em> which is also in a <strong>div</strong>. <span>This part is in span.</span>
+<div><em>Text not in span</em> which is also in a <strong>div</strong>. <span>This part is in span.</span></div>
 
 
 <p>This material is part of the...</p>
